--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,10 @@
 {
     "cSpell.words": [
+        "CIDR",
         "Jahier",
         "Monin",
         "Ordonnanceur",
+        "boote",
         "execl",
         "execp",
         "execv",
