--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,9 @@
         "imag",
         "leftarrow",
         "leftrightarrow",
+        "mapsto",
+        "mathbb",
+        "mathcal",
         "multicast",
         "netmask",
         "nstep",
