Cours jeudi 19/09/2019 et lundi 23/09/2019 matin

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,11 +6,13 @@
         "Monin",
         "Numéris",
         "Ordonnanceur",
+        "anselmi",
         "boote",
         "execl",
         "execp",
         "execv",
         "imag",
+        "jonatha",
         "leftarrow",
         "leftrightarrow",
         "mapsto",
