--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,8 +4,10 @@
         "CIDR",
         "Jahier",
         "Monin",
+        "Mult",
         "Numéris",
         "Ordonnanceur",
+        "Soustr",
         "anselmi",
         "boote",
         "execl",
