Update project settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,6 +15,7 @@
         "execv",
         "imag",
         "jonatha",
+        "leadsto",
         "leftarrow",
         "leftrightarrow",
         "mapsto",
