--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,34 +2,60 @@
     "cSpell.words": [
         "Brauner",
         "CIDR",
+        "CNAME",
+        "Datagram",
+        "Depl",
+        "Guivarch",
         "Jahier",
+        "Karn",
+        "LDAP",
+        "Mockapetris",
         "Monin",
         "Mult",
+        "Nayle",
         "Numéris",
         "Ordonnanceur",
         "Soustr",
+        "Velut",
         "anselmi",
+        "arpa",
         "boote",
+        "caractere",
+        "delacktime",
         "execl",
         "execp",
         "execv",
+        "fenetre",
+        "icmp",
         "imag",
+        "inet",
         "jonatha",
+        "kbits",
+        "koctets",
         "leadsto",
         "leftarrow",
         "leftrightarrow",
+        "libresolv",
+        "lorsqu'on",
         "mapsto",
         "mathbb",
         "mathcal",
+        "mirsa",
         "multicast",
         "netmask",
+        "netmasks",
+        "newpage",
         "nstep",
         "printf",
         "préemptif",
+        "recvspace",
         "rightarrow",
+        "sendspace",
         "simeq",
+        "stddev",
         "threadée",
         "traceg",
+        "traceroute",
         "unistd",
         "waitpid",
         "xmax",
