--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,32 +3,56 @@
         "Brauner",
         "CIDR",
         "CNAME",
+        "Caseine",
+        "Corbineau",
         "Datagram",
         "Depl",
+        "FILENO",
+        "Fradet",
+        "Gledel",
         "Guivarch",
+        "IIHM",
         "Jahier",
         "Karn",
+        "Kruskal",
         "LDAP",
         "Mockapetris",
         "Monin",
         "Mult",
         "Nayle",
+        "Negatif",
         "Numéris",
         "Ordonnanceur",
+        "PRNG",
         "Soustr",
+        "Specifique",
         "Velut",
+        "Virch",
         "anselmi",
         "arpa",
+        "bigcup",
         "boote",
         "caractere",
+        "cmdline",
+        "cmdn",
         "delacktime",
+        "depalma",
+        "eval",
         "execl",
+        "execle",
+        "execlp",
         "execp",
         "execv",
+        "execvp",
+        "execvpe",
+        "failwith",
         "fenetre",
+        "fich",
         "icmp",
         "imag",
+        "indep",
         "inet",
+        "infty",
         "jonatha",
         "kbits",
         "koctets",
@@ -45,19 +69,26 @@
         "netmask",
         "netmasks",
         "newpage",
+        "nfree",
         "nstep",
         "printf",
         "préemptif",
+        "readcmd",
         "recvspace",
+        "resultat",
         "rightarrow",
         "sendspace",
         "simeq",
         "stddev",
+        "struct",
+        "subseteq",
         "threadée",
         "traceg",
         "traceroute",
+        "triangleright",
         "unistd",
         "waitpid",
+        "wakeup",
         "xmax",
         "xmin",
         "ymax",
