--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -33,6 +33,8 @@
         "bigcup",
         "boote",
         "caractere",
+        "ceph",
+        "cifs",
         "cmdline",
         "cmdn",
         "delacktime",
@@ -50,6 +52,8 @@
         "fich",
         "icmp",
         "imag",
+        "indempotente",
+        "indempotentes",
         "indep",
         "inet",
         "infty",
