TR - CM lundi 18/11/2019

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,6 +23,7 @@
         "Negatif",
         "Numéris",
         "Ordonnanceur",
+        "POSIX",
         "PRNG",
         "Soustr",
         "Specifique",
