--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -71,6 +71,7 @@
         "mathcal",
         "mirsa",
         "multicast",
+        "multithreads",
         "netmask",
         "netmasks",
         "newpage",
