--- a/SE/TP/1/fichiers_fournis/Makefile
+++ b/SE/TP/1/fichiers_fournis/Makefile
@@ -10,4 +10,4 @@ my_tst: my_tst.o readcmd.o
 # shell: shell.o readcmd.o
 
 clean:
-	rm -f shell shell.o readcmd.o tst tst.o my_tst my_tst.o
+	rm -f shell shell.o readcmd.o tst tst.o my_tst my_tst.o in* out*
